[tool.poetry]
name = "openapi-test-generator"
version = "0.1.0"
description = ""
authors = ["Marco Müllner <muellnermarco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
